getTypeName and alias dcomType to get the name of the COMIDispatch object and other derivatives

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,3 +79,7 @@ importFrom(RDCOMClient, createTypeVarName)
 exportMethods(createTypeVarName)
 
 exportMethods(dput)
+
+
+export("getTypeName", dcomType)
+exportMethods("getTypeName")
